# SGC-main

./: README.md  main.py  pyproject.toml  requirements.txt  trainer.py
exps/: 10,10_cifar100.json  10,10_cub200.json  10,10_flower.json  10,10_food.json  10,10_imagenet-r.json  10,10_imagenet100.json  10,10_imagenet1000.json  100,10_cars.json  100,10_cub200.json  14,14_cars.json  20,20_imagenet-r.json  50,5_cifar100.json  50,5_flower.json  50,5_food.json
logs/combined_learner/imagenet-r/0/10/: continual-CLIP-INR_1993.txt
logs/combined_learner/imagenet100/0/10/: continual-CLIP-IN100_1993.txt
models/: SGC.py  clgcbm.py
utils/: data.py  data_manager.py  factory.py  grouped_prototypical_net.py  inc_net.py  maxsplit.py  split_dataset.py  toolkit.py
