[project]
name = "sgc-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ftfy>=6.3.1",
    "kagglehub>=0.4.0",
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
]
